# test-setup-fortran

./: CMakeLists.txt  README.md  fpm.toml  meson.build
.github/workflows/: cmake.yml  cmake_ninja.yml  fpm.yml  meson.yml
app/: main.f90
src/: CMakeLists.txt  mod_hw.f90  test-setup-fortran.f90
